# rcm-sommar-2019

./: .gitignore  HowToGit.md  README.md  Rapport.md  Stories.md
app/: app.js  id  id.pub  package-lock.json  package.json  report.20200131.152621.39712.0.001.json
app/database/: authorization.js  getCameraData.js  getFrictionData.js  getProvinceData.js  getStationData.js  getWeatherData.js  login.js  test.js  testConnection.js  uploadFrictionData.js
app/public/javascripts/graph/: Options.js  RunGraphs.js  getFrictionData.js  getWeatherData.js  graphs.js
app/public/javascripts/map/: boundaryCanvas.js  cameraData.js  chosenFrictionField.js  chosenStationField.js  countyData.js  countyNames.js  drawTools.js  friction.js  frictionData.js  map.js  mapTileLayer.js  markers.js  parseCamera.js  popup.js  searchStation.js  stationPopup.js  stations.js  weatherData.js
app/public/stylesheets/: graph.css  map.css  style.css
app/routes/: api.js  index.js
app/views/: graph.ejs  index.ejs  login.ejs  map.ejs
backend/: .e6.txt.icloud  Cargo.toml  camera_data_cache.xml  e6.txt  station_data_cache.xml  test  weather_data_cache.xml  xml_to_mysql_1.0.0_amd64.deb
backend Influx/: Cargo.toml  README.md  station_data.xml  weather_data.xml
backend Influx/src/: database.rs  main.rs  parse_xml.rs
backend/src/: auth.rs  bucket.rs  camera_data_cache.xml  database.rs  fetch.rs  main.rs  parse_xml.rs  station_data_cache.xml  weather_data_cache.xml
