[package]
name = "xml_to_mysql"
version = "1.0.0"
authors = ["Aron Strandberg <arostr-5@student.ltu.se>"]
edition = "2018"
license = "MIT"
description = "Parsing tool from xml to mysql"
readme = "README.md"
homepage = "https://github.com/dynematic/xml_to_mysql"
repository = "https://github.com/dynematic/xml_to_mysql"
keywords = ["xml", "mysql", "parse"]

[dependencies]
reqwest = "0.9.9"
quick-xml = "0.12.0"
mysql = "15.1.0"
rust-s3 = "0.13.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.deb]
maintainer = "Aron Strandberg <arostr-5@student.ltu.se>"
copyright = "2018-2019, Aron Strandberg <arostr-5@student.ltu.se>"
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
    ["target/release/xml_to_mysql", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]

